--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figuras geométricas</title>
+    <title>Promedio, Moda y Mediana</title>
 </head>
 <body>
     <h1>
-        Figuras geométricas
+        Promedio, moda y mediana
     </h1>
     
     <script src="./formulas.js"></script>
