se agrega interfaz basica en html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <h1>
         Promedio, moda y mediana
     </h1>
+
+    <form>
+
+        <input id="valor" type="number" />
+        <button type="button" onclick="addToArray()">
+        Agregar
+        </button>
+        <p id="respuesta"></p>
+        <p id="respuestaArray"></p>
+        <p id="respuestaPromedio"></p>
+        <p id="respuestaModa"></p>
+        <p id="respuestaMediana"></p>
+
+    </form>
     
     <script src="./formulas.js"></script>
 </body>
